refactoring by benutzer, patient and arzt